--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
   "dependencies": {
-    "@types/express": "^4.17.17",
-    "express": "^4.18.2",
-    "mysql2": "^3.5.2",
-    "sequelize": "^6.32.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.3"
+    "@types/express": "4.17.21",
+    "express": "4.19.2",
+    "jest": "29.7.0",
+    "mysql2": "3.10.1",
+    "sequelize": "6.37.3",
+    "ts-node": "10.9.2",
+    "typescript": "5.5.2"
   },
   "scripts": {
-    "serv": "nodemon ./src/index.ts"
+    "serv": "nodemon ./src/index.ts",
+    "test": "jest"
   },
   "name": "zmaisonapi",
   "version": "1.0.0",
   "description": "A REST API writtent in Typescript for ZMaison Project",
   "author": "rochdy0",
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "@types/jest": "29.5.12",
+    "nodemon": "3.1.4",
+    "ts-jest": "29.1.5"
   }
 }
